fix uneven margins, load rep/sen correctly

--- a/txlege84/static/scss/pages/_bill.scss
+++ b/txlege84/static/scss/pages/_bill.scss
@@ -1,7 +1,6 @@
 .bill-section {
   @include fill-parent;
 
-  margin-bottom: 1em;
   ul {
     list-style: none;
   }
@@ -67,7 +66,7 @@
 
 .bill-stage {
   @include span-columns(12);
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 
   &.complete {
 
